# cargo-cloudrun

./: .gitignore  Cargo.toml  README.md
examples/http/: Cargo.toml
src/: README.md  init.rs  main.rs
templates/event/: Cargo.toml  Dockerfile  NotCargo.toml
templates/event/src/: main.rs
templates/http/: NotCargo.toml
templates/http/src/: main.rs
