[package]
name = "cargo-cloudrun"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A Cargo extension to easily deploy Rust applications to Google Cloud Run"

[dependencies]
serde = "1.0"
serde_json = "1.0"
clap = { version = "4.5.23", features = ["derive", "usage", "default", "cargo", "default"] }
dialoguer = "0.11.0"
google-cloudevents = "0.1.5"
clap-cargo = "0.14.1"
