[package]
name = "axum-example"
version = "0.3.0"
edition = "2021"

[dependencies]

cloudevents-sdk = { git = "https://github.com/cloudevents/sdk-rust.git", rev = "897cd85", features = ["axum-lib", "axum", "async-trait", "http"] }
axum = { version = "0.7.4", features = ["json", "macros"] }  # Downgrade to 0.7.x
axum-extra = { version = "0.9.0", features = ["protobuf"] }  # Use compatible version
tower-http = { version = "0.5.0", features = ["trace"] }     # Use compatible version

#axum = { version = "^0.8.0-rc.1", features = ["macros"] }
#axum-extra = { version = "0.10.0-rc.1", features = ["protobuf"] }
prost = "0.13.4"
http = "^1.2"
tokio = { version = "^1", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
#tower-http = { version = "0.6.2", features = ["trace"] }
serde_json = { version = "1.0.134", features = ["raw_value"] }
google-cloudevents = "^0.1.7"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.9.0"