[package]
name = "axum-example"
version = "0.3.0"
edition = "2021"

[profile.release]
lto="thin"
panic="abort"
strip="symbols"


[dependencies]

cloudevents-sdk = { git = "https://github.com/cloudevents/sdk-rust.git", rev = "897cd85", features = ["axum-lib", "axum", "async-trait", "http"] }
axum = { version = "0.7.4", features = ["json", "macros", "http2"] }  # Downgrade to 0.7.x
tower-http = { version = "0.5.0", features = ["trace"] }     # Use compatible version

prost = "0.13.4"
http = "^1.2"
tokio = { version = "^1", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
google-cloudevents = { branch ="main", git =  "https://github.com/fourlexboehm/google-cloudevents-rs.git", features = ["axum"] }
#google-cloudevents = { path = "../../../google-cloudevents/rust", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.9.0"


