[package]
name = "axum-example"
version = "0.3.0"
edition = "2021"

[profile.release]
lto="thin"
panic="abort"
strip="symbols"


[dependencies]

#cloudevents-sdk = { version = "0.8.0", features = ["axum-lib", "axum", "async-trait", "http"] }
axum = { version = "0.7", features = ["json", "macros", "http2"] }  # Downgrade to 0.7.x
tower-http = { version = "0.5.0", features = ["trace"] }     # Use compatible version

prost = "0.13.4"
http = "^1.2"
tokio = { version = "^1", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
google-cloudevents = { version = "0.1.11", features = ["axum"] }
#google-cloudevents = { path = "../../../google-cloudevents/rust", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.9.0"


